<resources>
    <string name="geojson_url" translatable="false">api/v1/assets/geojson.json</string>
    <string name="app_name" translatable="false">Biophonie</string>
    <string name="fragment_recording" translatable="false">fragment_recording</string>
    <string name="next">Next</string>
    <string name="biophonie_introduction">&lt;p&gt;As it is sometimes invisible to our eyes, &lt;b&gt;Biophonie&lt;/b&gt; is an interface for listening to nature and its biodiversity.&lt;/p&gt;&lt;br&gt;&lt;p&gt;Like &lt;b&gt;Bernie Krause&lt;/b&gt;\'s work studying bioacoustics, the Biophonie digital project maps natural &lt;b&gt;sound environments&lt;/b&gt; over time. Whether it\'s the wind in the trees, birdsong or the subtle sounds of insects at dusk, these &lt;b&gt;soundscapes reflect the biodiversity&lt;/b&gt; and life present in our environment.&lt;/p&gt;&lt;br&gt;&lt;p&gt;Once these soundscapes have been captured and observed, Biophonie will enable us to compare them from one period to another, to understand the impoverishment or growth of natural spaces.&lt;/p&gt;&lt;br&gt;&lt;p&gt;This project is produced by &lt;b&gt;Labo.mg&lt;/b&gt; (Margaux Crinon and Geoffrey Dorne: concept and design) in partnership with &lt;b&gt;Alban Rahier&lt;/b&gt; (development).&lt;/p&gt;</string>
    <string name="skip">Skip</string>
    <string name="done">Start</string>
    <string name="firstlaunch_map_description">&lt;b&gt;Browse&lt;/b&gt; on the Biophonie map and &lt;b&gt;listen to&lt;/b&gt; soundscapes.</string>
    <string name="firstlaunch_listening_description">&lt;b&gt;Click&lt;/b&gt; to listen to an &lt;b&gt;ambient sound&lt;/b&gt;.</string>
    <string name="firstlaunch_location_description">&lt;b&gt;Geolocate yourself&lt;/b&gt; to listen to the soundscapes around you.</string>
    <string name="firstlaunch_record_description">&lt;b&gt;Register&lt;/b&gt; your own soundscapes on the map!</string>
    <string name="subtitle"><![CDATA[Let\'s listen to & preserve our planet\'s soundscapes]]></string>
    <string name="name">Name</string>
    <string name="firstlaunch_name_description">&lt;b&gt;At Labo.mg&lt;/b&gt; we like privacy. We\'ll only ask for your name :)</string>
    <string name="georges">Georges</string>
    <string name="sound_title">Forest at dawn</string>
    <string name="name_cannot_be_null">Name cannot be null.</string>
    <string name="name_should_be_longer">Name should be longer than 2 characters.</string>
    <string name="connection_failed">Connection failed.</string>
    <string name="unknown_error">Oops, something went unexpectedly.</string>
    <string name="server_error">Server error.</string>
    <string name="name_already_taken">Name already taken.</string>
    <string name="bad_request">Bad request.</string>
    <string name="special_characters_unallowed">Special characters are not allowed.</string>
    <string name="permission_not_granted">Permission refused, return</string>
    <string name="validation">OK</string>
    <string name="description_title"><b>Finally</b> give your recording a title</string>
    <string name="title">Title</string>
    <string name="import_picture">Import a picture</string>
    <string name="shhh">Shh, listen…</string>
    <string name="network_error">Server connection failed</string>
    <string name="default_error">Oops, an error has occurred</string>
    <string name="expand_player">See the sound</string>
    <string name="expand_image">See the image</string>
    <string name="about_biophonie">About Biophonie</string>
    <string name="licence">LICENCE</string>
    <string name="gnu_gpl_v3_0">GNU GPL v3.0</string>
    <string name="developped_location">developed here: 121°E 33°N</string>
    <string name="go_to_labo_mg">Find Labo.mg</string>
    <string name="retry">Try again</string>
    <string name="play">Play</string>
    <string name="locate">Locate</string>
    <string name="trip">Travel</string>
    <string name="record">Record</string>
    <string name="about">About us</string>
    <string name="see_picture">View photo</string>
    <string name="clearing">Clearing</string>
    <string name="desert">Desert</string>
    <string name="fields">Fields</string>
    <string name="garden">Garden</string>
    <string name="grasslands">Meadow</string>
    <string name="hedge">Hedge</string>
    <string name="lake">Lake</string>
    <string name="mountains">Hills</string>
    <string name="potager">Vegetable garden</string>
    <string name="rainforest">Jungle</string>
    <string name="temperateforest">Forest</string>
    <string name="permission_required">Permission required</string>
    <string name="location_access">Location access</string>
    <string name="microphone_access">Microphone access</string>
    <string name="cancel">Cancel</string>
    <string name="searching_location">Searching location</string>
    <string name="location_permission_required">We only use your position to place sounds on the map. Approximate location access is sufficient.</string>
    <string name="location_permission_permanently_declined">This app needs location access to record a sound. Location data is only used to place sounds on the map.</string>
    <string name="record_permission_required">We only use your microphone to record sounds for the app. Please grant access to the microphone.</string>
    <string name="record_permission_permanently_declined">This app needs access to the microphone to capture sounds. No other audio is accessed or saved.</string>
    <string name="grant">Grant</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="close">Close</string>
    <string name="gps_activation">GPS required</string>
    <string name="gps_activation_required">To be able to use this feature, you need to activate the GPS in the settings.</string>
    <string name="go_to_gps_settings">Settings</string>
</resources>
